Fix button icon size on iphone

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 0.25rem;
 }
 
 /* No JS styles 
